crates/cli/tests/snapshots/run_test__system_windows__handles_process_exit_nonzero.snap
---
source: crates/cli/tests/run_test.rs
expression: get_assert_output(&assert)
---
▪▪▪▪ systemWindows:exitNonZero
stdout
stderr 
▪▪▪▪ systemWindows:exitNonZero

[38;5;15m[48;5;161m[1m ERROR [0m Process cmd.exe failed with a 1 exit code.


