crates/cli/tests/snapshots/run_test__system_windows__handles_process_exit_zero.snap
---
source: crates/cli/tests/run_test.rs
expression: get_assert_output(&assert)
---
▪▪▪▪ npm install
▪▪▪▪ systemWindows:exitZero
stdout

Tasks: 1 completed
 Time: 100ms

stderr 

