crates/cli/tests/snapshots/run_test__system_windows__inherits_moon_env_vars.snap
---
source: crates/cli/tests/run_test.rs
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ npm install
▪▪▪▪ systemWindows:envVarsMoon
MOON_RUN_TARGET=systemWindows:envVarsMoon
MOON_PROJECT_ID=systemWindows

Tasks: 1 completed
 Time: 100ms


