crates/cli/tests/snapshots/run_test__system_windows__passes_args_through.snap
---
source: crates/cli/tests/run_test.rs
expression: get_assert_output(&assert)
---
▪▪▪▪ systemWindows:passthroughArgs
-aBc --opt value --optCamel=value foo "'bar baz'" --opt-kebab 123

Tasks: 1 completed
 Time: 100ms



