crates/cli/tests/snapshots/run_test__system_windows__runs_bat_script.snap
---
source: crates/cli/tests/run_test.rs
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ systemWindows:bat
stdout

Tasks: 1 completed
 Time: 100ms

stderr 

