crates/cli/tests/snapshots/run_test__system_windows__runs_from_project_root.snap
---
source: crates/cli/tests/run_test.rs
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ npm install
▪▪▪▪ systemWindows:runFromProject
<WORKSPACE>\system-windows

Tasks: 1 completed
 Time: 100ms


