crates/cli/tests/snapshots/run_test__system_windows__runs_from_workspace_root.snap
---
source: crates/cli/tests/run_test.rs
expression: "get_path_safe_output(&assert, fixture.path())"
---
▪▪▪▪ systemWindows:runFromWorkspace
<WORKSPACE>

Tasks: 1 completed
 Time: 100ms


