crates/cli/tests/snapshots/run_test__system_windows__sets_env_vars.snap
---
source: crates/cli/tests/run_test.rs
expression: get_assert_output(&assert)
---
▪▪▪▪ npm install
▪▪▪▪ systemWindows:envVars
MOON_FOO=abc
MOON_BAR=123
MOON_BAZ=true

Tasks: 1 completed
 Time: 100ms


